--- a/index.html
+++ b/index.html
@@ -5,7 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Super App</title>
 </head>
+
 <body>
+    <header>
+        <img src="/assets/images/Logo.png" alt="Logo SuperApp">
+        <nav>
+            <ul>
+                <li>A propos</li>
+                <li>Services</li>
+                <li>L'équipe</li>
+                <li>Contact</li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section>
+
+        </section>
+        <section>
+
+        </section>
+        <section>
+
+        </section>
+        <section>
+
+        </section>
+    </main>
     
+    <footer>
+
+    </footer>
 </body>
+
 </html>
